# task_about_circles

./: .travis.yml  CMakeLists.txt  README.md
CircleLib/: CMakeLists.txt  circle.h
CircleTest/: CMakeLists.txt  CircleTest.cpp
